Setup slider bar. Deciding between flex or grid layout. Leaning toward flex since it's a smaller component.

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
       <p class="pageviews">Pageviews</p>
       <p class="pricing">$ /month</p>
       <div class="slider"></div>
-      <p class="billing">Monthly Billing</p>
-      <div class="toggle"></div>
-      <p class="billing">Yearly Billing</p>
-      <p class="discount">25% discount</p>
+      <div class="billing">
+        <span class="billing--span">Monthly Billing</span>
+        <span class="billing--toggle"></span>
+        <span class="billing--span">Yearly Billing</span>
+        <span class="billing--discount">25% discount</span>
+      </div>
       <section>
         <div>
           <p class="benefit">Unlimited websites</p>
