Separated out top and bottom sections of container. Worked on mobile first layout, centering elements in a column layout.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>Simple, traffic-based pricing</h1>
     <p class="intro">Sign-up for our 30-day trial. No credit card required.</p>
 
-    <div class="pricing-comp-grid-container">
+    <div class="pricing-comp-container-top">
       <p class="pageviews">Pageviews</p>
       <p class="pricing">$ /month</p>
       <div class="slider"></div>
@@ -45,17 +45,17 @@
         <span class="billing--span">Yearly Billing</span>
         <span class="billing--discount">25% discount</span>
       </div>
-      <section>
-        <div>
-          <p class="benefit">Unlimited websites</p>
-          <p class="benefit">100% data ownership</p>
-          <p class="benefit">Email reports</p>
-        </div>
+    </div>
+    <section class="pricing-comp-container-bottom">
+      <div class="benefit">
+        <p class="benefit__p">Unlimited websites</p>
+        <p class="benefit__p">100% data ownership</p>
+        <p class="benefit__p">Email reports</p>
         <a class="button" href="#">
           <div>Start my trial</div>
         </a>
-      </section>
-    </div>
+      </div>
+    </section>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
