Stylized and positione toggle and toggle button. Added checkmarks(not quite the right ones), and centered benefits paragraphs.

--- a/index.html
+++ b/index.html
@@ -41,16 +41,24 @@
       <div class="slider"></div>
       <div class="billing">
         <span class="billing--span">Monthly Billing</span>
-        <span class="billing--toggle"></span>
+        <div class="billing--toggle">
+          <div class="billing--toggle__btn"></div>
+        </div>
         <span class="billing--span">Yearly Billing</span>
         <span class="billing--discount">25% discount</span>
       </div>
     </div>
     <section class="pricing-comp-container-bottom">
-      <div class="benefit">
-        <p class="benefit__p">Unlimited websites</p>
-        <p class="benefit__p">100% data ownership</p>
-        <p class="benefit__p">Email reports</p>
+      <div class="benefits">
+        <p class="benefits__p">
+          <span class="benefits__span">&#10004;</span> Unlimited websites
+        </p>
+        <p class="benefits__p">
+          <span class="benefits__span">&#10004;</span> 100% data ownership
+        </p>
+        <p class="benefits__p">
+          <span class="benefits__span">&#10004;</span> Email reports
+        </p>
         <a class="button" href="#">
           <div>Start my trial</div>
         </a>
