Changed billing toggle button to an checkbox input. Got it working with :before and input:checked.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       <div class="slider"></div>
       <div class="billing">
         <span class="billing--span">Monthly Billing</span>
-        <div class="billing--toggle">
-          <div class="billing--toggle__btn"></div>
-        </div>
+        <label class="billing--toggle">
+          <input type="checkbox" unchecked />
+          <span class="billing--toggle__btn"></span>
+        </label>
         <span class="billing--span">Yearly Billing</span>
         <span class="billing--discount">25% discount</span>
       </div>
