--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
     <div class="pricing-comp-container-top">
       <p class="pageviews">Pageviews</p>
-      <p class="pricing">$ /month</p>
+      <p class="pricing"><span class="pricing__span">$16.00</span> /month</p>
       <div class="slider"></div>
       <div class="billing">
-        <span class="billing--span">Monthly Billing</span>
-        <label class="billing--toggle">
+        <span class="billing__span">Monthly Billing</span>
+        <label class="billing-toggle">
           <input type="checkbox" unchecked />
-          <span class="billing--toggle__btn"></span>
+          <span class="billing-toggle__btn"></span>
         </label>
-        <span class="billing--span">Yearly Billing</span>
-        <span class="billing--discount">25% discount</span>
+        <span class="billing__span">Yearly Billing</span>
+        <span class="billing__discount">25% discount</span>
       </div>
     </div>
     <section class="pricing-comp-container-bottom">
@@ -60,8 +60,8 @@
         <p class="benefits__p">
           <span class="benefits__span">&#10004;</span> Email reports
         </p>
-        <a class="button" href="#">
-          <div>Start my trial</div>
+        <a href="#">
+          <div class="button-trial">Start my trial</div>
         </a>
       </div>
     </section>
