Added span and class to per month or per year text. Finished writing calcPricing() to update HTML and reflect slider and toggle choices.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 
     <div class="pricing-comp-container-top">
       <p class="pageviews">100k Pageviews</p>
-      <p class="pricing"><span class="pricing__span">$16.00</span> /month</p>
+      <p class="pricing">
+        <span class="pricing__span">$16.00</span> /<span
+          class="pricing__duration"
+          >month</span
+        >
+      </p>
       <div class="slider-container">
         <input type="range" min="0" max="4" value="2" step="1" class="slider" />
       </div>
