Added some more comments. Added two HTML elements for annual discount text and made them viewawble dependent on media query.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
           <span class="billing-toggle__btn"></span>
         </label>
         <span class="billing__span">Yearly Billing</span>
-        <span class="billing__discount">- 25%</span>
+        <span class="billing__discount billing__discount--mobile">- 25%</span>
+        <span class="billing__discount billing__discount--desktop"
+          >25% discount</span
+        >
       </div>
     </div>
     <section class="pricing-comp-container-bottom">
