Changed checkmark to svg.

--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
     <section class="pricing-comp-container-bottom">
       <div class="benefits">
         <p class="benefits__p">
-          <span class="benefits__span">&#10004;</span> Unlimited websites
+          <img src="images/icon-check.svg" alt="Green check mark" /> Unlimited
+          websites
         </p>
         <p class="benefits__p">
-          <span class="benefits__span">&#10004;</span> 100% data ownership
+          <img src="images/icon-check.svg" alt="Green check mark" /> 100% data
+          ownership
         </p>
         <p class="benefits__p">
-          <span class="benefits__span">&#10004;</span> Email reports
+          <img src="images/icon-check.svg" alt="Green check mark" /> Email
+          reports
         </p>
       </div>
       <a href="#" class="button__a">
