Added cross-browser support for IE. Need to debug slider disappearing. Added box-shadow, and background SVGs. Decreased max-width to 550px.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     </style>
   </head>
   <body>
-    <h1>Simple, traffic-based pricing</h1>
-    <p class="intro">Sign-up for our 30-day trial. No credit card required.</p>
-
+    <div class="intro">
+      <h1>Simple, traffic-based pricing</h1>
+      <p class="intro__p">
+        Sign-up for our 30-day trial. No credit card required.
+      </p>
+    </div>
     <div class="pricing-comp-container-top">
       <p class="pageviews">100k Pageviews</p>
       <p class="pricing">
